--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ NEXTAUTH_URL="for development use http://localhost:3000/ and for production use 
 
 ## NextJS
 NEXT_PUBLIC_PROXY_URI=https://v1anime.vercel.app/
-CONSUMET_URI="host your own API from this repo https://github.com/consumet/api.consumet.org. Don't put / at the end of the url."
+CONSUMET_URI=https://customisthefianl.vercel.app
 
 ## Optional (Will work without this)
 MALSYNC_URI=https://api.malsync.moe/mal/anime/anilist: ## Dont worry if it not works they ban ips so cant do anything
