--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ ANILIST_CLIENT_SECRET=8bmea5HynlioXnpZWhP2uvGyslpDZpSKqFOBZiMa
 
 ## NextAuth Details
 NEXTAUTH_SECRET=yqsdAIKIgB2YZOTaT4NO9aPNxCbTCzwoGJ36rQJO
-NEXTAUTH_URL="for development use http://localhost:3000/ and for production use your domain url"
+NEXTAUTH_URL=https://customisthefianl.vercel.app
 
 ## NextJS
-NEXT_PUBLIC_PROXY_URI=https://v1anime.vercel.app/
+NEXT_PUBLIC_PROXY_URI=https://v1anime.vercel.app
 CONSUMET_URI=https://customisthefianl.vercel.app
 
 ## Optional (Will work without this)
