--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ MALSYNC_URI=https://api.malsync.moe/mal/anime/anilist: ## Dont worry if it not w
 ZORO_URI=https://vercel.com/ansh-mishras-projects/aniwatch-apidont-delete
 
 ## MongoDB
-MONGODB_URI=mongodb+srv://ansh:sex@sex.temfh.mongodb.net/?retryWrites=true&w=majority&appName=sex
+MONGODB_URI=mongodb+srv://oa6vi6:nvg6xc@cluster0.ebz5v.mongodb.net/?retryWrites=true&w=majority
 
 ## Deployment URLs
 NEXT_PUBLIC_DEV_URL=https://v1anime.vercel.app
