--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.4.0",
     "@ducanh2912/next-pwa": "^10.2.2",
+    "@consumet/extensions": "^1.7.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.3",
     "@megatunger/x-frame-bypass": "^1.0.2",
